deploy: 8ff636e2e750683bfc90148187b6ae17475e0150

--- a/dh2024/index.html
+++ b/dh2024/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Editions with Future</title>
+    <title>e-editiones at DH2024</title>
     <meta name="description" content="e-editiones – Society for Scholarly Digital Editions">
     
 <link rel="icon" href="/favicon.ico">
@@ -88,7 +88,7 @@
                 <a href="https://twitter.com/EEditiones" class="me-4">
                     <i class="bi bi-twitter"></i>
                 </a>
-                <a href="https://github.com/eeditiones/e-editiones-website/blob/main/./join.md">
+                <a href="https://github.com/eeditiones/e-editiones-website/blob/main/./dh2024.md">
                     <i class="bi bi-github"></i>
                 </a>
             </div>
@@ -101,28 +101,47 @@
     
     <div class="row gx-5">
         <div class="col-md-8">
-            <h1>Editions with Future</h1>
-            <blockquote>
-<p><strong>Update: <a href="/dh2024">meet e-editiones at DH2024 in Washington DC, USA</a></strong></p>
-</blockquote>
-<h4 id="rooted-in-standards---built-by-the-community---meant-to-last" tabindex="-1">Rooted in standards -  built by the community - meant to last</h4>
-<p>e-editiones is an international non-profit society bringing together edition projects, cultural heritage institutions, scholars, and developers to empower digital projects by promoting open standards and community collaboration— with the ultimate goal of helping to sustain editions far into the future. We</p>
+            <h1>e-editiones at DH2024</h1>
+            <p>From August 6 till 9, 2024 several e-editiones members will join the annual conference of the Alliance of Digital Humanities Organizations: <a href="https://dh2024.adho.org/">DH2024 - Reinvention &amp; Responsibility</a> at Washington, D.C., USA.</p>
+<h3 id="list-of-tei-publisher-related-talks%2C-posters-and-events-around-dh2024" tabindex="-1">List of TEI Publisher related talks, posters and events around DH2024</h3>
+<h4 id="from-a-publishing-tool-to-a-virtual-research-environment%3A-producing-scholarly-editions-with-tel-publisher" tabindex="-1">From a publishing tool to a virtual research environment: producing scholarly editions with TEl Publisher</h4>
 <ul>
-<li>foster the development of open source software for digital scholarly editions and related projects.</li>
-<li>provide a meeting place and think tank for researchers, memory institutions, and developers alike.</li>
-<li>organize regular workshops and community meetings.</li>
+<li>When: <strong>Wednesday 7th of August 10:30 EST</strong></li>
+<li>Who: Wolfgang Meier, Joseph C Wicentowski, Magdalena Turska, Helena Bermudez Sabel</li>
+<li>What: Presentation</li>
+<li>Where: Van Metre Hall 308</li>
+<li><a href="https://whova.com/portal/webapp/dh_202407/Agenda/3915869">Whova Link</a></li>
 </ul>
-<h5 id="join-our-open-community" tabindex="-1">Join our open community</h5>
-<p>Get in contact with us via <a href="mailto:info@e-editiones.org">email</a>, <a href="https://www.e-editiones.org/pages/get-in-touch/#mailing-list">mailing list</a>, <a href="https://social.e-editiones.org/@eeditiones">Mastodon</a>, <a href="https://www.e-editiones.org/pages/get-in-touch/#slack-community">Slack</a>, <a href="https://github.com/eeditiones/">GitHub</a>, <a href="https://www.linkedin.com/company/e-editiones/">LinkedIn</a> or <a href="https://x.com/eeditiones">Twitter</a>.</p>
-<h5 id="become-a-member" tabindex="-1">Become a Member</h5>
-<p>Gain access to our knowledge hub and influence the future of the open-source tools we develop like <a href="https://tei-publisher.com/">TEI Publisher</a> and <a href="https://github.com/eeditiones/roaster?tab=readme-ov-file#roaster">Roaster</a>.</p>
-<p>Get advice for all steps in your edition project life-cycle:</p>
+<h4 id="poster-session-i" tabindex="-1">Poster Session I</h4>
 <ul>
-<li>funding applications</li>
-<li>workflows, including HTR/OCR models, setting up your database, and creating your digital scholarly edition</li>
-<li>publishing and long-term hosting of editions</li>
+<li>When: <strong>Wednesday 7th of August 6:00 PM – 7:30 PM EST</strong></li>
+<li>Where: Van Metre Hall 125</li>
 </ul>
-<p>e-editiones offers <a href="https://www.e-editiones.org/pages/how-to-become-a-member/#institutional-membership">institutional</a> and <a href="https://www.e-editiones.org/pages/how-to-become-a-member/#individual-membership">individual</a> memberships. To become a member please contact <a href="mailto:board@e-editiones.org">board@e-editiones.org</a>.</p>
+<h5 id="publishing-process-for-digital-scholarly-editing%3A-jagiellonian-digital-platform" tabindex="-1">Publishing Process for Digital Scholarly Editing: Jagiellonian Digital Platform</h5>
+<ul>
+<li>Who: Joanna Katarzyna Hałackiewicz,  Iwona Grabska-Gradzinska, Magdalena Eulalia Komorowska, Magdalena Turska</li>
+<li><a href="https://whova.com/portal/webapp/dh_202407/Artifact/107777">Whova Link</a></li>
+</ul>
+<h5 id="new-generation-of-electronic-edition-for-neo-latin-literature-%E2%80%93-rescue-from-oblivion%2C-stage-two" tabindex="-1">New Generation of Electronic Edition for Neo-Latin Literature – Rescue from Oblivion, Stage Two</h5>
+<ul>
+<li>Who: Iwona Grabska-Gradzinska, Grażyna Urban-Godziek</li>
+<li><a href="https://whova.com/portal/webapp/dh_202407/Artifact/108318">Whova Link</a></li>
+</ul>
+<h4 id="e-editiones-%2F-tei-publisher-get-together" tabindex="-1">e-editiones / TEI Publisher Get Together</h4>
+<ul>
+<li>When: <strong>Wednesday 7th of August 7:00 PM – 9:30 PM EST</strong></li>
+<li>Where: <a href="https://rocklands.com/locations/arlington-va/">ROCKLANDS</a> - souther style cusine - at <a href="https://maps.app.goo.gl/VqqA6XEUmabFegHD9">3471 Washington Blvd. Arlington, VA 22201</a>.</li>
+</ul>
+<p>Everyone is invited to join, you don't need to be a conference participant</p>
+<h4 id="poster-session-ii---reinvention%2C-responsibility-%26-resurrection%3A-how-to-future-proof-an-edition" tabindex="-1">Poster Session II -  Reinvention, Responsibility &amp; Resurrection: how to future-proof an edition</h4>
+<ul>
+<li>When: <strong>Friday 9th of August 2:00 PM - 3:30 PM EST</strong></li>
+<li>Who: Magdalena Turska, Helena Bermudez Sabel</li>
+<li>Where: Van Metre Hall 125</li>
+<li><a href="https://whova.com/portal/webapp/dh_202407/Artifact/108353">Whova Link</a></li>
+</ul>
+<h3 id="editions-with-future" tabindex="-1">Editions with Future</h3>
+<p>Read more about <a href="/join">e-editiones and TEI Publisher</a>.</p>
 
         </div>
         <aside class="col-md-4">
