--- a/pages/how-to-become-a-member/index.html
+++ b/pages/how-to-become-a-member/index.html
@@ -105,7 +105,7 @@
             <blockquote>
 <p>re-using components, pooling resources and sharing best practices benefits everyone in the community and ensures our projects remain online and maintained for the decades to come</p>
 </blockquote>
-<p>To become a member please contact <a href="mailto:info@e-editiones.org">info@e-editiones.org</a>.</p>
+<p>To become a member please contact <a href="mailto:board@e-editiones.org">board@e-editiones.org</a>.</p>
 <h3 id="institutional-membership" tabindex="-1">Institutional membership</h3>
 <p>Do you represent a legal entity in the broadly understood research, academic or cultural heritage domains? With institutional membership contribution available from CHF 500.– you will benefit from full membership rights and receive e-editiones support in funding proposals.</p>
 <h3 id="individual-membership" tabindex="-1">Individual membership</h3>
