deploy: 0e99b90341bbe579d4ac1585707673fc3cb2f767

--- a/dh2024/index.html
+++ b/dh2024/index.html
@@ -130,7 +130,7 @@
 <h4 id="e-editiones-%2F-tei-publisher-get-together" tabindex="-1">e-editiones / TEI Publisher Get Together</h4>
 <ul>
 <li>When: <strong>Wednesday 7th of August 7:00 PM – 9:30 PM EST</strong></li>
-<li>Where: <a href="https://rocklands.com/locations/arlington-va/">ROCKLANDS</a> - souther style cusine - at <a href="https://maps.app.goo.gl/VqqA6XEUmabFegHD9">3471 Washington Blvd. Arlington, VA 22201</a>.</li>
+<li>Where: <a href="https://rocklands.com/locations/arlington-va/">Rocklands BBQ</a> - souther style cusine - at <a href="https://maps.app.goo.gl/VqqA6XEUmabFegHD9">3471 Washington Blvd. Arlington, VA 22201</a>.</li>
 </ul>
 <p>Everyone is invited to join, you don't need to be a conference participant</p>
 <h4 id="poster-session-ii---reinvention%2C-responsibility-%26-resurrection%3A-how-to-future-proof-an-edition" tabindex="-1">Poster Session II -  Reinvention, Responsibility &amp; Resurrection: how to future-proof an edition</h4>
