--- a/dh2024/index.html
+++ b/dh2024/index.html
@@ -102,9 +102,9 @@
     <div class="row gx-5">
         <div class="col-md-8">
             <h1>e-editiones at DH2024</h1>
-            <p>From August 6 till 9, 2024 several e-editiones members will join the annual conference of the Alliance of Digital Humanities Organizations: <a href="https://dh2024.adho.org/">DH2024 - Reinvention &amp; Responsibility</a> at Washington, D.C., USA.</p>
-<h3 id="list-of-tei-publisher-related-talks%2C-posters-and-events-around-dh2024" tabindex="-1">List of TEI Publisher related talks, posters and events around DH2024</h3>
-<h4 id="from-a-publishing-tool-to-a-virtual-research-environment%3A-producing-scholarly-editions-with-tel-publisher" tabindex="-1">From a publishing tool to a virtual research environment: producing scholarly editions with TEl Publisher</h4>
+            <p>From August 6 till 9, 2024 several e-editiones members will join the annual conference of the Alliance of Digital Humanities Organizations: <a href="https://dh2024.adho.org/">DH2024 - Reinvention &amp; Responsibility</a> at Washington, D.C., 🇺🇸.</p>
+<h3 id="%F0%9F%93%8B-list-of-tei-publisher-related-talks%2C-posters-and-events-around-dh2024" tabindex="-1">📋 List of TEI Publisher related talks, posters and events around DH2024</h3>
+<h4 id="%F0%9F%8E%A4-from-a-publishing-tool-to-a-virtual-research-environment%3A-producing-scholarly-editions-with-tel-publisher" tabindex="-1">🎤 From a publishing tool to a virtual research environment: producing scholarly editions with TEl Publisher</h4>
 <ul>
 <li>When: <strong>Wednesday 7th of August 10:30 EST</strong></li>
 <li>Who: Wolfgang Meier, Joseph C Wicentowski, Magdalena Turska, Helena Bermudez Sabel</li>
@@ -112,7 +112,7 @@
 <li>Where: Van Metre Hall 308</li>
 <li><a href="https://whova.com/portal/webapp/dh_202407/Agenda/3915869">Whova Link</a></li>
 </ul>
-<h4 id="poster-session-i" tabindex="-1">Poster Session I</h4>
+<h4 id="%F0%9F%8F%9E%EF%B8%8F-poster-session-i" tabindex="-1">🏞️ Poster Session I</h4>
 <ul>
 <li>When: <strong>Wednesday 7th of August 6:00 PM – 7:30 PM EST</strong></li>
 <li>Where: Van Metre Hall 125</li>
@@ -127,20 +127,21 @@
 <li>Who: Iwona Grabska-Gradzinska, Grażyna Urban-Godziek</li>
 <li><a href="https://whova.com/portal/webapp/dh_202407/Artifact/108318">Whova Link</a></li>
 </ul>
-<h4 id="e-editiones-%2F-tei-publisher-get-together" tabindex="-1">e-editiones / TEI Publisher Get Together</h4>
+<h4 id="%F0%9F%A5%B3%2B%F0%9F%8D%94-public-e-editiones-%2F-tei-publisher-get-together-at-rocklands-bbq" tabindex="-1">🥳+🍔 Public e-editiones / TEI Publisher Get Together at Rocklands BBQ</h4>
 <ul>
 <li>When: <strong>Wednesday 7th of August 7:00 PM – 9:30 PM EST</strong></li>
 <li>Where: <a href="https://rocklands.com/locations/arlington-va/">Rocklands BBQ</a> - souther style cusine - at <a href="https://maps.app.goo.gl/VqqA6XEUmabFegHD9">3471 Washington Blvd. Arlington, VA 22201</a>.</li>
 </ul>
-<p>Everyone is invited to join, you don't need to be a conference participant</p>
-<h4 id="poster-session-ii---reinvention%2C-responsibility-%26-resurrection%3A-how-to-future-proof-an-edition" tabindex="-1">Poster Session II -  Reinvention, Responsibility &amp; Resurrection: how to future-proof an edition</h4>
+<p>🚀 Are you a TEI Publisher user who wants to connect with other users? Do you wanna know more about e-editiones and meet some of our members in person? Then join us for the Get-Together Wednesday evening.</p>
+<p>💡 Whether you're a beginner or an expert, this event is the perfect opportunity to exchange tips &amp; tricks an get to know each other. You don't need to be a DH2024 participant to join and no registration is required. Just come by. Its only 6 minutes by foot away from the DH2024 venue.</p>
+<h4 id="%F0%9F%8F%9E%EF%B8%8F-poster-session-ii---reinvention%2C-responsibility-%26-resurrection%3A-how-to-future-proof-an-edition" tabindex="-1">🏞️ Poster Session II -  Reinvention, Responsibility &amp; Resurrection: how to future-proof an edition</h4>
 <ul>
 <li>When: <strong>Friday 9th of August 2:00 PM - 3:30 PM EST</strong></li>
 <li>Who: Magdalena Turska, Helena Bermudez Sabel</li>
 <li>Where: Van Metre Hall 125</li>
 <li><a href="https://whova.com/portal/webapp/dh_202407/Artifact/108353">Whova Link</a></li>
 </ul>
-<h3 id="editions-with-future" tabindex="-1">Editions with Future</h3>
+<h3 id="%F0%9F%93%93-editions-with-future" tabindex="-1">📓 Editions with Future</h3>
 <p>Read more about <a href="/join">e-editiones and TEI Publisher</a>.</p>
 
         </div>
