--- a/pages/board/index.html
+++ b/pages/board/index.html
@@ -105,8 +105,8 @@
             <ul>
 <li>Dr. <a href="https://k-r.ch">Andreas Kränzle</a>, <a href="https://karlbarth.unibas.ch/de/">Karl Barth-Archiv</a>, Basel</li>
 <li>Dr. Pascale Sutter, <a href="https://www.ssrq-sds-fds.ch/home/">Rechtsquellenstiftung des Schweizerischen Juristenvereins</a></li>
-<li><a href="https://www.histsem.uni-kiel.de/de/das-institut-1/abteilungen/professur-fuer-geschichte-des-spaeten-mittelalters-sowie-wirtschafts-und-sozialgeschichte/team/anne-diekjobst">Dr. des. Anne Diekjobst</a>, Christian-Albrechts-Universität zu Kiel, Historisches Seminar</li>
-<li>dipl. soz. Wolfgang Meier, <a href="http://existsolutions.com/index.html">eXist Solutions GmbH</a>, Lenzkirch/Berlin</li>
+<li>Dr. des. Anne Diekjobst, Gottfried Wilhelm Leibniz Bibliothek</li>
+<li>Wolfgang Meier, <a href="http://existsolutions.com/index.html">eXist Solutions GmbH</a>, Lenzkirch/Berlin, Heidelberger Akademie der Wissenschaften, Heidelberg</li>
 <li><a href="https://english.northwestern.edu/people/faculty/emeritus/martin-mueller.html">Prof. em. Dr. Martin Mueller</a>, North Western University, Deparment of English</li>
 <li>Dr. des. Roberta Padlina, Data Scientist, <a href="https://www.memoriav.ch/">Memoriav</a></li>
 </ul>
