deploy: 5de71b3cbc35ef05dcb344eb0868714bf1007ce8

--- a/dh2024/index.html
+++ b/dh2024/index.html
@@ -131,6 +131,7 @@
 <ul>
 <li>When: <strong>Wednesday 7th of August 7:00 PM – 9:30 PM EST</strong></li>
 <li>Where: <a href="https://rocklands.com/locations/arlington-va/">Rocklands BBQ</a> - souther style cusine - at <a href="https://maps.app.goo.gl/VqqA6XEUmabFegHD9">3471 Washington Blvd. Arlington, VA 22201</a>.</li>
+<li>Event on <a href="https://whova.com/portal/webapp/dh_202407/CommunityBoard/topic/2122044/23825496/">Whova</a> and <a href="https://www.linkedin.com/events/publice-editiones-teipublisherg7226237273892093955/about/">LinkedIn</a></li>
 </ul>
 <p>🚀 Are you a TEI Publisher user who wants to connect with other users? Do you wanna know more about e-editiones and meet some of our members in person? Then join us for the Get-Together Wednesday evening.</p>
 <p>💡 Whether you're a beginner or an expert, this event is the perfect opportunity to exchange tips &amp; tricks an get to know each other. You don't need to be a DH2024 participant to join and no registration is required. Just come by. Its only 6 minutes by foot away from the DH2024 venue.</p>
