deploy: 943d7405b2c749443decb8bc816d78619beede30

--- a/dh2024/index.html
+++ b/dh2024/index.html
@@ -151,7 +151,20 @@ td, th {
 </table>
 <h4 id="%F0%9F%A5%B3%2B%F0%9F%8D%94-public-e-editiones-%2F-tei-publisher-get-together-at-rocklands-bbq" tabindex="-1">🥳+🍔 Public e-editiones / TEI Publisher Get Together at Rocklands BBQ</h4>
 <p>On Wednesday 7th of August we had a nice get together at Rocklands BBQ.</p>
-<p><strong>Show 1-2 photos?</strong></p>
+<table>
+<thead>
+<tr>
+<th></th>
+<th></th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td><div> <a href='../img/dh2024-get-together2.jpg'> <img src='../img/dh2024-get-together2-small.jpg' width='100%'></a></div></td>
+<td><div> <a href='../img/dh2024-get-together1.jpg'> <img src='../img/dh2024-get-together1-small.jpg' width='100%'></a></div></td>
+</tr>
+</tbody>
+</table>
 <h5 id="%F0%9F%8F%9E%EF%B8%8F-poster-session-ii---reinvention%2C-responsibility-%26-resurrection%3A-how-to-future-proof-an-edition" tabindex="-1">🏞️ Poster Session II -  Reinvention, Responsibility &amp; Resurrection: how to future-proof an edition</h5>
 <p><em>Magdalena Turska, Helena Bermudez Sabel</em></p>
 <table>
