deploy: 8b352f3b92f6e151c6ed73c0b2508506f5a2df7b

--- a/pages/getting-started/index.html
+++ b/pages/getting-started/index.html
@@ -105,8 +105,8 @@
             <h1>Getting Started</h1>
             <p>If you want to dive in straight away go to the <a href="https://teipublisher.com/exist/apps/tei-publisher/doc/documentation.xml?id=odd-customization">TEI Publisher Documentation</a>.</p>
 <h2 id="tei-publisher-from-scratch" tabindex="-1">TEI Publisher From Scratch</h2>
-<p>To get started you can work through our workshop «TEI Publisher From Scratch». It is recommended to first view the instructions by Wolfgang Meier. If you have to catch up with some technologies or standards you will find helpful links and literature below.</p>
-<p><a href="https://github.com/eeditiones/workshop/">GitHub repository of the workshop</a></p>
+<p>We collect the materials prepared for different training events in <a href="https://github.com/eeditiones/workshop/">this Github repository</a>. To get started, you can work through our most comprehensive workshop: «TEI Publisher From Scratch». It is recommended to first view the instructions by Wolfgang Meier. If you have to catch up with some technologies or standards you will find helpful links and literature below.</p>
+<p><a href="https://github.com/eeditiones/workshop/blob/master/2020-06_tp-from-scratch.md">Workshop instructions</a></p>
 <h3 id="part-1" tabindex="-1">Part 1</h3>
 <ul>
 <li>Simple renditions with model</li>
@@ -116,7 +116,7 @@
 <li>Using modelSequence</li>
 <li>Showing Metadata from the teiHeader</li>
 </ul>
-<p><a href="https://www.youtube.com/watch?v=QuWrfAS2SWM">Workshop Live recording (Video)</a> <a href="https://github.com/eeditiones/workshop/blob/master/e-editiones-workshop-20200608.pdf">Slides</a> <a href="https://github.com/eeditiones/workshop/blob/master/assignments/A1.md">Assignments</a><br>
+<p><a href="https://www.youtube.com/watch?v=QuWrfAS2SWM">Workshop Live recording (Video)</a> <a href="https://github.com/eeditiones/workshop/blob/master/slides/e-editiones-workshop-20200608.pdf">Slides</a> <a href="https://github.com/eeditiones/workshop/blob/master/assignments/A1.md">Assignments</a><br>
 <a href="https://www.youtube.com/watch?v=WhcDzCaVzYs&amp;feature=youtu.be">Solutions (Video)</a></p>
 <h3 id="part-2" tabindex="-1">Part 2</h3>
 <ul>
@@ -124,7 +124,7 @@
 <li>Output metadata in a separate column</li>
 <li>Display additional metadata</li>
 </ul>
-<p><a href="https://www.youtube.com/watch?v=5qu94bhftpk">Workshop Live recording (Video)</a> <a href="https://github.com/eeditiones/workshop/blob/master/e-editiones-workshop-20200614.pdf">Slides</a><br>
+<p><a href="https://www.youtube.com/watch?v=5qu94bhftpk">Workshop Live recording (Video)</a> <a href="https://github.com/eeditiones/workshop/blob/master/slides/e-editiones-workshop-20200614.pdf">Slides</a><br>
 <a href="https://github.com/eeditiones/workshop/blob/master/assignments/A2.md">Assignments</a><br>
 <a href="https://www.youtube.com/watch?v=8JUAwjvDCGw">Solutions (Video)</a></p>
 <h3 id="part-3" tabindex="-1">Part 3</h3>
@@ -134,7 +134,7 @@
 <li>Global document styles</li>
 <li>Download the application to local disk</li>
 </ul>
-<p><a href="https://www.youtube.com/watch?v=FS36nYFlTbE">Workshop Live recording (Video)</a> <a href="https://github.com/eeditiones/workshop/blob/master/e-editiones-workshop-20200622.pdf">Slides</a> <a href="https://github.com/eeditiones/workshop/blob/master/assignments/A3.md">Assignements</a> <a href="https://youtu.be/HxCo303tgOk">Solutions (Video)</a></p>
+<p><a href="https://www.youtube.com/watch?v=FS36nYFlTbE">Workshop Live recording (Video)</a> <a href="https://github.com/eeditiones/workshop/blob/master/slides/e-editiones-workshop-20200622.pdf">Slides</a> <a href="https://github.com/eeditiones/workshop/blob/master/assignments/A3.md">Assignements</a> <a href="https://youtu.be/HxCo303tgOk">Solutions (Video)</a></p>
 <h2 id="helpful-literature-and-websites" tabindex="-1">Helpful Literature and Websites</h2>
 <p>Working with TEI Publisher requires some knowledge of TEI, basic XPath and a little CSS. If you don't know any XPath yet, we recommend to read the short <a href="https://newtfire.org/courses/dh/explainXPath.html">introduction</a> linked below.</p>
 <h3 id="tei-publisher-documentation" tabindex="-1">TEI Publisher Documentation</h3>
