deploy: 0479e19e11bfbb8a0de3c1de8b5019624025c48f

--- a/pages/meeting-minutes/index.html
+++ b/pages/meeting-minutes/index.html
@@ -103,7 +103,21 @@
     <div class="row gx-lg-5 gx-2">
         <div class="col-lg-9 col-md-9">
             <h1>Meeting Minutes</h1>
-            <h3 id="assembly-2024-16th-april-2024-(16-h-cest)" tabindex="-1">Assembly 2024 16th April 2024 (16 h CEST)</h3>
+            <h3 id="assembly-2025-1st-april-2025-(16-h-cest)" tabindex="-1">Assembly 2025 1st April 2025 (16 h CEST)</h3>
+<ul>
+<li>
+<p>Invitation/Agenda - 4nd AGM of e-editiones (german, english)
+<a href="/resources/2025/Einladung_Traktanden 5. GV e-editiones.pdf">PDF</a></p>
+</li>
+<li>
+<p>[ad 5] Annual Accounts 2024 <a href="/resources/2025/e-editiones-gewinn-und.verlust-2024.pdf">PDF</a>), bilance <a href="/resources/2025/e-editiones-bilanz-2024.pdf">PDF</a>
+<a href="/resources/2025/e-editiones-postfinance-2024.pdf">Postfinance 2024</a>, <a href="/resources/e-editiones-paypal-2024.pdf">Paypal 2024</a> revision <a href="/resources/2025/Revisionsbericht_e_editiones_2024.pdf">PDF</a></p>
+</li>
+<li>
+<p>[ad 6] <a href="/resources/2024/e-editiones-budget_2025.pdf">Budget 2025</a></p>
+</li>
+</ul>
+<h3 id="assembly-2024-16th-april-2024-(16-h-cest)" tabindex="-1">Assembly 2024 16th April 2024 (16 h CEST)</h3>
 <p><a href="https://teams.microsoft.com/l/meetup-join/19:meeting_YjY3YThmN2MtMWE2ZC00NDAyLWEwMzctMTRmYWY1NWMzNDM2@thread.v2/0?context=%7B%22Tid%22:%22bd21f2e9-9af5-42a1-8caf-eb264278467f%22,%22Oid%22:%2218e49f65-fe7e-42be-99f1-a8fb561fb3e8%22%7D">MS Teams</a></p>
 <ul>
 <li>Invitation/Agenda - 4nd AGM of e-editiones (german, english) <a href="/resources/2024/Einladung_Traktanden 4. GV e-editiones.pdf">PDF</a></li>
@@ -150,7 +164,7 @@
         
         <aside class="col-lg-3 col-md-3">
             <nav class="toc" >
-        <ul><li><a href="#assembly-2024-16th-april-2024-(16-h-cest)">Assembly 2024 16th April 2024 (16 h CEST)</a></li><li><a href="#assembly-2023-2nd-may-2023-(16-h-cest)">Assembly 2023 2nd May 2023 (16 h CEST)</a></li><li><a href="#assembly-2022-5th-april-2022">Assembly 2022 5th April 2022</a></li><li><a href="#assembly-2021-1st-march-2021">Assembly 2021 1st March 2021</a></li><li><a href="#amendments-to-the-statutes-5th-nov-2020">Amendments to the statutes 5th Nov 2020</a></li><li><a href="#founding-meeting-4th-may-2020">Founding meeting 4th May 2020</a></li></ul>
+        <ul><li><a href="#assembly-2025-1st-april-2025-(16-h-cest)">Assembly 2025 1st April 2025 (16 h CEST)</a></li><li><a href="#assembly-2024-16th-april-2024-(16-h-cest)">Assembly 2024 16th April 2024 (16 h CEST)</a></li><li><a href="#assembly-2023-2nd-may-2023-(16-h-cest)">Assembly 2023 2nd May 2023 (16 h CEST)</a></li><li><a href="#assembly-2022-5th-april-2022">Assembly 2022 5th April 2022</a></li><li><a href="#assembly-2021-1st-march-2021">Assembly 2021 1st March 2021</a></li><li><a href="#amendments-to-the-statutes-5th-nov-2020">Amendments to the statutes 5th Nov 2020</a></li><li><a href="#founding-meeting-4th-may-2020">Founding meeting 4th May 2020</a></li></ul>
       </nav>
         </aside>
         
