deploy: 78e7881b145be8f1d38eb69abac7c0593daecdf1

--- a/pages/meeting-minutes/index.html
+++ b/pages/meeting-minutes/index.html
@@ -110,11 +110,14 @@
 <a href="/resources/2025/Einladung_Traktanden 5. GV e-editiones.pdf">PDF</a></p>
 </li>
 <li>
-<p>[ad 5] Annual Accounts 2024 <a href="/resources/2025/e-editiones-gewinn-und.verlust-2024.pdf">PDF</a>), bilance <a href="/resources/2025/e-editiones-bilanz-2024.pdf">PDF</a>
+<p>[ad 3] Protokoll der Sitzung vom 16.4.2024 (german) <a href="/resources/2025/Protokoll der 4. GV e-editiones.pdf">Protokoll der 3. GV e-editiones</a></p>
+</li>
+<li>
+<p>[ad 5] Annual Accounts 2024 <a href="/resources/2025/e-editiones-gewinn-und-verlust-2024.pdf">PDF</a>), bilance <a href="/resources/2025/e-editiones-bilanz-2024.pdf">PDF</a>
 <a href="/resources/2025/e-editiones-postfinance-2024.pdf">Postfinance 2024</a>, <a href="/resources/e-editiones-paypal-2024.pdf">Paypal 2024</a> revision <a href="/resources/2025/Revisionsbericht_e_editiones_2024.pdf">PDF</a></p>
 </li>
 <li>
-<p>[ad 6] <a href="/resources/2024/e-editiones-budget_2025.pdf">Budget 2025</a></p>
+<p>[ad 6] <a href="/resources/2025/e-editiones-budget_2025.pdf">Budget 2025</a></p>
 </li>
 </ul>
 <h3 id="assembly-2024-16th-april-2024-(16-h-cest)" tabindex="-1">Assembly 2024 16th April 2024 (16 h CEST)</h3>
