--- a/pages/meeting-minutes/index.html
+++ b/pages/meeting-minutes/index.html
@@ -104,8 +104,8 @@
         <div class="col-lg-9 col-md-9">
             <h1>Meeting Minutes</h1>
             <h3 id="assembly-2025-1st-april-2025-(16-h-cest)" tabindex="-1">Assembly 2025 1st April 2025 (16 h CEST)</h3>
-<p>Teams: <a href="https://teams.microsoft.com/l/meetup-join/19%3ameeting_ZWNkNTI1MDEtYjhmMi00NTg4LWEyMTgtNDY0YzUyMTYwMjA0%40thread.v2/0?context=%7b%22Tid%22%3a%22bd21f2e9-9af5-42a1-8caf-eb264278467f%22%2c%22Oid%22%3a%22a95e8e6b-7512-4d5d-ba06-899e4e51d145%22%7d">https://teams.microsoft.com/l/meetup-join/19%3Ameeting_ZWNkNTI1MDEtYjhmMi00NTg4LWEyMTgtNDY0YzUyMTYwMjA0%40thread.v2/0?context={&quot;Tid&quot;%3A&quot;bd21f2e9-9af5-42a1-8caf-eb264278467f&quot;%2C&quot;Oid&quot;%3A&quot;a95e8e6b-7512-4d5d-ba06-899e4e51d145&quot;}</a>
-Join conversation</p>
+<p>Teams: <a href="https://teams.microsoft.com/l/meetup-join/19%3ameeting_ZWNkNTI1MDEtYjhmMi00NTg4LWEyMTgtNDY0YzUyMTYwMjA0%40thread.v2/0?context=%7b%22Tid%22%3a%22bd21f2e9-9af5-42a1-8caf-eb264278467f%22%2c%22Oid%22%3a%22a95e8e6b-7512-4d5d-ba06-899e4e51d145%22%7d">Link</a></p>
+<p>Join conversation</p>
 <ul>
 <li>
 <p>Invitation/Agenda - 4nd AGM of e-editiones (german, english)
