deploy: f23b7a3b59a88fd2a1a3b180ad6ad3a8a2988dcf

--- a/pages/members/index.html
+++ b/pages/members/index.html
@@ -134,7 +134,9 @@
 <li><a href="https://www.geschichte.uni-wuppertal.de/de/personen/digital-humanities/stephan-makowski-ma.html">Stephan Makowski</a>, Wissenschaftlicher Mitarbeiter in Digital Humanities, DFG-Projekt &quot;Index Librorum Civitatum&quot;, Bergische Universität Wuppertal</li>
 <li><a href="https://dmaus.name/">David Maus</a>, Leiter der Abteilung Forschung und Entwicklung. Staats- und <a href="https://www.sub.uni-hamburg.de/startseite.html">Universitätsbibliothek Hamburg Carl von Ossietzky</a></li>
 <li>Wolfgang Meier, Mitarbeiter at the <a href="https://www.hadw-bw.de">Heidelberger Akademie der Wissenschaften</a>; <a href="https://www.jinntec.com">Jinntec GmbH</a> and <a href="https://www.existsolutions.com">exist Solutions</a>, Berlin</li>
-<li><a href="https://www.hisoma.mom.fr/annuaire/morlock-emmanuelle">Emmanuelle Morlock</a>, Ingénieure au CNRS – Humanités numériques &amp; données de la recherche | Laboratoire HiSoMA (UMR 5189) – Lyon | Chargée de mission « Science ouverte » à l’Institut des Sciences humaines et sociales (InSHS) pour la politique de soutien aux revues scientifiques et données de la recherche</li>
+</ul>
+<!-- [Emmanuelle Morlock](https://www.hisoma.mom.fr/annuaire/morlock-emmanuelle), Ingénieure au CNRS – Humanités numériques & données de la recherche | Laboratoire HiSoMA (UMR 5189) – Lyon | Chargée de mission « Science ouverte » à l’Institut des Sciences humaines et sociales (InSHS) pour la politique de soutien aux revues scientifiques et données de la recherche -->
+<ul>
 <li>Martin Mueller, PhD, Professor Emeritus of English &amp; Classics, Northwestern University, project lead of <a href="https://earlyprint.org/">Early Print</a></li>
 <li>Elli Mylonas, <a href="https://library.brown.edu/cds">Center for Digital Scholarship</a>, University Library, Brown University</li>
 <li>Maria Niku, Software Developer, <a href="https://www.finlit.fi/en">Finnish Literature Society</a>, Helsinki; <a href="https://kivi.finlit.fi/lea">Lea – critical edition</a>, <a href="https://editiot.finlit.fi/exist/apps/gottlund/index.html">Forest Finns' Letters to Gottlund</a></li>
